# Yuezhangchen-Reproducible-Research

./: Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  reproducible EDA_netflix.ipynb  requirements.txt
data/src/: main.py
docs/source/: conf.py  index.rst
netflix_analysis/: __init__.py
netflix_analysis/analysis/: __init__.py  explorer.py  forecaster.py  portfolio.py
netflix_analysis/data/: __init__.py  cleaner.py  loader.py
netflix_analysis/visualization/: __init__.py  plotter.py
report/: report.qmd
