[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "netflix-analysis"
version = "0.1.0"
description = "Reproduction of Netflix EDA (Kanigara 2021) in Python"
requires-python = ">=3.11"
dependencies = ["pandas>=2.2","numpy>=1.26","matplotlib>=3.8","seaborn>=0.13"]

[project.optional-dependencies]
dev = ["ruff>=0.4","pre-commit>=3.7","sphinx>=7.3","sphinx-rtd-theme>=2.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","W","I","N","D"]
ignore = ["D203","D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
where = ["."]
include = ["netflix_analysis*"]
